Fixed an issue with the navbar
The text was too close to the image when you changed the width of the
screen but now I finally fixed it. :)

--- a/css/nav-style.css
+++ b/css/nav-style.css
@@ -239,6 +239,7 @@ a:hover {
 @media only screen and (max-height: 736px), (max-width: 1366px) {
 	#nav-image {
 		margin-top: 7px !important;
+		margin-right: 20px;
 	}
 	br {
 		display: unset !important;
